--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@actions/core": "^1.9.0",
     "@actions/github": "^5.0.3",
-    "@octokit/app": "^13.0.5"
+    "@octokit/auth-app": "^4.0.4"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.34.0"
